--- a/test/fixtures/product_nature_categories.yml
+++ b/test/fixtures/product_nature_categories.yml
@@ -65,15 +65,34 @@
 #   updater_id: 1
 #
 
-
-# # Empty samples of product_nature_categories
 product_nature_categories_001:
-  id: 1
-  name: 'ProductNatureCategory 1'
-  number: "000001"
+  active: true
   created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  depreciable: true
+  id: 1
+  name: "Generic Product Nature Category"
+  number: "PNC001"
+  purchasable: true
+  reductible: true
+  saleable: true
+  storable: true
+  subscribing: true
   updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
-# product_nature_categories_002:
-#   id: 2
-#   name: 'ProductNatureCategory 2'
+product_nature_categories_002:
+  active: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  depreciable: true
+  id: 2
+  name: "Obsolete Product Nature Category"
+  number: "PNC002"
+  purchasable: true
+  reductible: true
+  saleable: true
+  storable: true
+  subscribing: true
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
