--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -66,17 +66,17 @@
 
 product_nature_variants_001:
   active: true
-  commercial_name: "Lorem ipsum"
+  commercial_name: "Generic Product Variant"
   created_at: "2009-07-19 19:13:59 +02:00"
   creator_id: 1
   horizontal_rotation: 0
   id: 1
   nature_id: 1
   unit_name: "unit"
-  nature_name: "Lorem ipsum"
+  nature_name: "Generic Product Type"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
-  variety: "bos"
+  variety: "product"
 
 product_nature_variants_002:
   active: true
@@ -105,4 +105,18 @@ product_nature_variants_004:
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
   variety: "building"
+
+product_nature_variants_029:
+  active: true
+  commercial_name: "Herd"
+  created_at: "2009-07-19 19:13:59 +02:00"
+  creator_id: 1
+  horizontal_rotation: 0
+  unit_name: "herd"
+  id: 29
+  nature_id: 29
+  nature_name: "Herd"
+  updated_at: "2009-07-19 19:13:59 +02:00"
+  updater_id: 1
+  variety: "animal_group"
 
