--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -67,13 +67,14 @@ product_natures_001:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  evolvable: true
   id: 1
-  population_counting: "unitary"
-  name: "Vache"
-  number: "LI1"
+  name: "Generic Product Type"
+  number: "PN001"
+  population_counting: "decimal"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variety: "bos"
+  variety: "product"
 
 product_natures_002:
   active: true
@@ -113,4 +114,17 @@ product_natures_004:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variety: "building"
+
+product_natures_029:
+  active: true
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 29
+  population_counting: "unitary"
+  name: "Herd"
+  number: "HERD"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variety: "animal_group"
 
