--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -128,52 +128,52 @@ animal_groups_003:
   variety: "animal_group"
 
 # -----------------------------------------------------------------------------
-# {12} AnimalMedecines
+# {12} AnimalMedicines
 
-animal_medecines_001:
+animal_medicines_001:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 12001
-  name: "AnimalMedecine #1"
+  name: "AnimalMedicine #1"
   nature_id: 1
   number: "12001"
-  type: 'AnimalMedecine'
+  type: 'AnimalMedicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "animal_medecine"
+  variety: "animal_medicine"
 
-animal_medecines_002:
+animal_medicines_002:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 12002
-  name: "AnimalMedecine #2"
+  name: "AnimalMedicine #2"
   nature_id: 1
   number: "12002"
-  type: 'AnimalMedecine'
+  type: 'AnimalMedicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "animal_medecine"
+  variety: "animal_medicine"
 
-animal_medecines_003:
+animal_medicines_003:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 12003
-  name: "AnimalMedecine #3"
+  name: "AnimalMedicine #3"
   nature_id: 1
   number: "12003"
-  type: 'AnimalMedecine'
+  type: 'AnimalMedicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "animal_medecine"
+  variety: "animal_medicine"
 
 # -----------------------------------------------------------------------------
 # { 7} Animals
@@ -183,6 +183,7 @@ animals_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 7001
+  identification_number: "A7001"
   name: "IONOSPHERE"
   nature_id: 1
   number: "7001"
@@ -197,6 +198,7 @@ animals_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 7002
+  identification_number: "A7002"
   name: "ISABELLE"
   nature_id: 1
   number: "7002"
@@ -211,6 +213,7 @@ animals_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 7003
+  identification_number: "A7003"
   name: "Segolene"
   nature_id: 1
   number: "7003"
@@ -644,52 +647,52 @@ matters_005:
   variety: "matter"
 
 # -----------------------------------------------------------------------------
-# {11} Medecines
+# {11} Medicines
 
-medecines_001:
+medicines_001:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 11001
-  name: "Medecine #1"
+  name: "Medicine #1"
   nature_id: 1
   number: "11001"
-  type: 'Medecine'
+  type: 'Medicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "medecine"
+  variety: "medicine"
 
-medecines_002:
+medicines_002:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 11002
-  name: "Medecine #2"
+  name: "Medicine #2"
   nature_id: 1
   number: "11002"
-  type: 'Medecine'
+  type: 'Medicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "medecine"
+  variety: "medicine"
 
-medecines_003:
+medicines_003:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 11003
-  name: "Medecine #3"
+  name: "Medicine #3"
   nature_id: 1
   number: "11003"
-  type: 'Medecine'
+  type: 'Medicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "medecine"
+  variety: "medicine"
 
 # -----------------------------------------------------------------------------
 # { 6} MineralMatters
@@ -789,52 +792,52 @@ organic_matters_003:
 
 
 # -----------------------------------------------------------------------------
-# {13} PlantMedecines
+# {13} PlantMedicines
 
-plant_medecines_001:
+plant_medicines_001:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 13001
-  name: "PlantMedecine #1"
+  name: "PlantMedicine #1"
   nature_id: 1
   number: "13001"
-  type: 'PlantMedecine'
+  type: 'PlantMedicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "plant_medecine"
+  variety: "plant_medicine"
 
-plant_medecines_002:
+plant_medicines_002:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 13002
-  name: "PlantMedecine #2"
+  name: "PlantMedicine #2"
   nature_id: 1
   number: "13002"
-  type: 'PlantMedecine'
+  type: 'PlantMedicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "plant_medecine"
+  variety: "plant_medicine"
 
-plant_medecines_003:
+plant_medicines_003:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 13003
-  name: "PlantMedecine #3"
+  name: "PlantMedicine #3"
   nature_id: 1
   number: "13003"
-  type: 'PlantMedecine'
+  type: 'PlantMedicine'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   parent_id: 1
   variant_id: 1
-  variety: "plant_medecine"
+  variety: "plant_medicine"
 
 # -----------------------------------------------------------------------------
 # {10} Plants
