--- a/test/fixtures/documents.yml
+++ b/test/fixtures/documents.yml
@@ -47,11 +47,25 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 documents_001:
   archives_count: 0
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  key: "Lorem ipsum"
+  name: "Lorem ipsum"
+  nature: "veterinary_booklet"
+  number: "Lorem ipsum"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+
+documents_002:
+  archives_count: 0
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
   key: "Lorem ipsum"
   name: "Lorem ipsum"
   nature: "veterinary_booklet"
