--- a/test/fixtures/incidents.yml
+++ b/test/fixtures/incidents.yml
@@ -55,6 +55,7 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 incidents_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -62,7 +63,19 @@ incidents_001:
   name: "Lorem ipsum"
   nature: "mammite"
   observed_at: 2009-07-19 19:13:59 +02:00
-  target_id: 10
+  target_id: 7001
+  target_type: "Animal"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+incidents_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  name: "Lorem ipsum"
+  nature: "mammite"
+  observed_at: 2009-07-19 19:13:59 +02:00
+  target_id: 7001
   target_type: "Animal"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
