--- a/test/fixtures/preferences.yml
+++ b/test/fixtures/preferences.yml
@@ -59,3 +59,14 @@ preferences_001:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   user_id: 1
+
+preferences_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  name: "interface.helps.shown"
+  nature: "boolean"
+  boolean_value: false
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  user_id: 1
