--- a/test/fixtures/product_links.yml
+++ b/test/fixtures/product_links.yml
@@ -46,11 +46,21 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 product_links_001:
-  carried_id: 1
-  carrier_id: 1
+  carried_id: 16001
+  carrier_id: 16002
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_links_002:
+  carried_id: 16001
+  carrier_id: 16002
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
