--- a/test/fixtures/product_memberships.yml
+++ b/test/fixtures/product_memberships.yml
@@ -47,12 +47,24 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 product_memberships_001:
+  created_at: 2001-07-19 19:13:59 +02:00
+  creator_id: 1
+  group_id: 30001
+  id: 1
+  member_id: 40001
+  started_at: 2001-07-19 19:13:59 +02:00
+  updated_at: 2001-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_memberships_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  group_id: 2
-  id: 1
-  member_id: 1
+  group_id: 30001
+  id: 2
+  member_id: 40002
   started_at: 2009-07-19 19:13:59 +02:00
+  stopped_at: 2009-07-19 19:14:00 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
