--- a/test/fixtures/product_nature_variant_indicator_data.yml
+++ b/test/fixtures/product_nature_variant_indicator_data.yml
@@ -55,12 +55,27 @@
 #   updater_id: 1
 #   variant_id: 1
 #
+
 product_nature_variant_indicator_data_001:
   boolean_value: false
   computation_method: "frozen"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  indicator: "population"
+  indicator_datatype: "measure"
+  measure_value_unit: "unity"
+  measure_value_value: "1"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variant_id: 1
+
+product_nature_variant_indicator_data_002:
+  boolean_value: false
+  computation_method: "frozen"
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
   indicator: "population"
   indicator_datatype: "measure"
   measure_value_unit: "unity"
