--- a/test/fixtures/product_ownerships.yml
+++ b/test/fixtures/product_ownerships.yml
@@ -48,14 +48,22 @@
 #   updater_id: 1
 #
 
-
-
 product_ownerships_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   nature: "mine"
   product_id: 1
+  owner_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_ownerships_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  nature: "mine"
+  product_id: 2
   owner_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
