--- a/test/fixtures/product_process_phases.yml
+++ b/test/fixtures/product_process_phases.yml
@@ -46,10 +46,21 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 product_process_phases_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  name: "Lorem ipsum"
+  nature: "Lorem ipsum"
+  process_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_process_phases_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
   name: "Lorem ipsum"
   nature: "Lorem ipsum"
   process_id: 1
