--- a/test/fixtures/product_processes.yml
+++ b/test/fixtures/product_processes.yml
@@ -46,10 +46,22 @@
 #   updater_id: 1
 #   variety: "Lorem ipsum"
 #
+
 product_processes_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  name: "Lorem ipsum"
+  nature: "life"
+  repeatable: true
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variety: "plant"
+
+product_processes_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
   name: "Lorem ipsum"
   nature: "life"
   repeatable: true
