--- a/test/fixtures/documents.yml
+++ b/test/fixtures/documents.yml
@@ -66,7 +66,7 @@ documents_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  key: "Lorem ipsum"
+  key: "Lorem ipsum 2"
   name: "Lorem ipsum"
   nature: "veterinary_booklet"
   number: "Lorem ipsum"
