--- a/test/fixtures/incidents.yml
+++ b/test/fixtures/incidents.yml
@@ -63,10 +63,13 @@ incidents_001:
   name: "Lorem ipsum"
   nature: "mammite"
   observed_at: 2009-07-19 19:13:59 +02:00
+  priority: 2
+  state: "new"
   target_id: 7001
   target_type: "Animal"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+
 
 incidents_002:
   created_at: 2009-07-19 19:13:59 +02:00
@@ -75,6 +78,8 @@ incidents_002:
   name: "Lorem ipsum"
   nature: "mammite"
   observed_at: 2009-07-19 19:13:59 +02:00
+  priority: 2
+  state: "new"
   target_id: 7001
   target_type: "Animal"
   updated_at: 2009-07-19 19:13:59 +02:00
