--- a/test/fixtures/interventions.yml
+++ b/test/fixtures/interventions.yml
@@ -60,8 +60,8 @@ interventions_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  natures: "animal_care"
-  procedure: "animal_treatment"
+  natures: "grinding, soil_enrichment"
+  procedure: "plant_grinding"
   production_id: 1
   provisional: false
   state: "done"
@@ -73,8 +73,8 @@ interventions_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  natures: "animal_care"
-  procedure: "animal_treatment"
+  natures: "grinding, soil_enrichment"
+  procedure: "plant_grinding"
   production_id: 1
   provisional: false
   state: "done"
