--- a/test/fixtures/product_nature_categories.yml
+++ b/test/fixtures/product_nature_categories.yml
@@ -67,32 +67,40 @@
 
 product_nature_categories_001:
   active: true
+  asset_account_id: 1
+  charge_account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   depreciable: true
   id: 1
   name: "Generic Product Nature Category"
   number: "PNC001"
+  product_account_id: 1
   purchasable: true
   reductible: true
   saleable: true
+  stock_account_id: 1
   storable: true
-  subscribing: true
+  subscribing: false
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
 product_nature_categories_002:
   active: true
+  asset_account_id: 1
+  charge_account_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   depreciable: true
   id: 2
   name: "Obsolete Product Nature Category"
   number: "PNC002"
+  product_account_id: 1
   purchasable: true
   reductible: true
   saleable: true
+  stock_account_id: 1
   storable: true
-  subscribing: true
+  subscribing: false
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
