--- a/test/fixtures/intervention_casts.yml
+++ b/test/fixtures/intervention_casts.yml
@@ -27,10 +27,10 @@
 #  intervention_id :integer          not null
 #  lock_version    :integer          default(0), not null
 #  quantity        :decimal(19, 4)
+#  reference_name  :string(255)      not null
 #  roles           :string(320)
 #  updated_at      :datetime         not null
 #  updater_id      :integer
-#  variable        :string(255)      not null
 #  variant_id      :integer
 #
 #
@@ -41,28 +41,28 @@
 #   creator_id: 1
 #   id: 1
 #   intervention_id: 1
+#   reference_name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
-#   variable: "Lorem ipsum"
 #
 
 intervention_casts_001:
-  actor_id: 10
+  actor_id: equipments_001
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   intervention_id: 1
+  reference_name: "grinder"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variable: "grinder"
 
 intervention_casts_002:
-  actor_id: 7
+  actor_id: plants_003
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
   intervention_id: 1
+  reference_name: "grinded"
   roles: 'grinding-output, soil_enrichment-input'
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  variable: "grinded"
