--- a/test/fixtures/operations.yml
+++ b/test/fixtures/operations.yml
@@ -26,7 +26,7 @@
 #  id              :integer          not null, primary key
 #  intervention_id :integer          not null
 #  lock_version    :integer          default(0), not null
-#  position        :integer
+#  reference_name  :string(255)      not null
 #  started_at      :datetime         not null
 #  stopped_at      :datetime         not null
 #  updated_at      :datetime         not null
@@ -40,6 +40,7 @@
 #   creator_id: 1
 #   id: 1
 #   intervention_id: 1
+#   reference_name: "Lorem ipsum"
 #   started_at: 2009-07-19 19:13:59 +02:00
 #   stopped_at: 2009-07-19 19:13:59 +02:00
 #   updated_at: 2009-07-19 19:13:59 +02:00
@@ -51,6 +52,7 @@ operations_001:
   creator_id: 1
   id: 1
   intervention_id: 1
+  reference_name: '100'
   started_at: 2009-07-19 19:13:59 +02:00
   stopped_at: 2009-07-19 21:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -60,7 +62,8 @@ operations_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  intervention_id: 1
+  intervention_id: 2
+  reference_name: '100'
   started_at: 2009-07-19 19:13:59 +02:00
   stopped_at: 2009-07-19 21:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -71,6 +74,7 @@ operations_003:
   creator_id: 1
   id: 3
   intervention_id: 1
+  reference_name: '200'
   started_at: 2009-07-19 19:13:59 +02:00
   stopped_at: 2009-07-19 21:07:11 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
