--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -646,6 +646,20 @@ matters_005:
   variant_id: 1
   variety: "matter"
 
+matters_006:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1006
+  name: "Sand II"
+  nature_id: 1
+  number: "0012"
+  type: 'Matter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variant_id: 1
+  variety: "matter"
+
 # -----------------------------------------------------------------------------
 # {11} Medicines
 
