--- a/test/fixtures/product_deaths.yml
+++ b/test/fixtures/product_deaths.yml
@@ -46,3 +46,23 @@
 #   updater_id: 1
 #
 
+product_deaths_001:
+  absorber_id: matters_006
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  nature: "merging"
+  product_id: matters_001
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_deaths_002:
+  absorber_id: animals_001
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  nature: "consumption"
+  product_id: plants_001
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
