--- a/test/fixtures/product_measurements.yml
+++ b/test/fixtures/product_measurements.yml
@@ -48,3 +48,22 @@
 #   updater_id: 1
 #
 
+product_measurements_001:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  indicator: "temperature"
+  product_id: animals_003
+  started_at: 2009-07-19 19:13:59 +02:00
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+product_measurements_002:
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  indicator: "net_weight"
+  product_id: animals_003
+  started_at: 2009-07-19 19:13:59 +02:00
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
