--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -21,29 +21,28 @@
 # == Table: product_nature_variants
 #
 #  active                 :boolean          not null
+#  category_id            :integer          not null
 #  commercial_description :text
 #  commercial_name        :string(255)      not null
 #  contour                :string(255)
 #  created_at             :datetime         not null
 #  creator_id             :integer
 #  derivative_of          :string(120)
-#  frozen_indicators      :text
 #  horizontal_rotation    :integer          default(0), not null
 #  id                     :integer          not null, primary key
 #  lock_version           :integer          default(0), not null
 #  name                   :string(255)
 #  nature_id              :integer          not null
 #  nature_name            :string(255)      not null
-#  nomen                  :string(120)
 #  number                 :string(255)
 #  picture_content_type   :string(255)
 #  picture_file_name      :string(255)
 #  picture_file_size      :integer
 #  picture_updated_at     :datetime
+#  reference_name         :string(255)
 #  unit_name              :string(255)      not null
 #  updated_at             :datetime         not null
 #  updater_id             :integer
-#  variable_indicators    :text
 #  variety                :string(120)      not null
 #
 #
@@ -51,6 +50,7 @@
 #
 # product_nature_variants_001:
 #   active: true
+#   category_id: 1
 #   commercial_name: "Lorem ipsum"
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -66,6 +66,7 @@
 
 product_nature_variants_001:
   active: true
+  category_id: 1
   commercial_name: "Generic Product Variant"
   created_at: "2009-07-19 19:13:59 +02:00"
   creator_id: 1
@@ -80,6 +81,7 @@ product_nature_variants_001:
 
 product_nature_variants_002:
   active: true
+  category_id: 1
   commercial_name: "Lorem ipsum 2"
   created_at: "2009-07-19 19:13:59 +02:00"
   creator_id: 1
@@ -94,6 +96,7 @@ product_nature_variants_002:
 
 product_nature_variants_004:
   active: true
+  category_id: 1
   commercial_name: "Building"
   created_at: "2009-07-19 19:13:59 +02:00"
   creator_id: 1
@@ -108,6 +111,7 @@ product_nature_variants_004:
 
 product_nature_variants_029:
   active: true
+  category_id: 1
   commercial_name: "Herd"
   created_at: "2009-07-19 19:13:59 +02:00"
   creator_id: 1
