--- a/test/fixtures/productions.yml
+++ b/test/fixtures/productions.yml
@@ -58,7 +58,7 @@ productions_001:
   creator_id: 1
   id: 1
   name: "Wheat 2013"
-  state: "started"
+  state: "draft"
   variant_id: 1
   static_support: true
   updated_at: 2009-07-19 19:13:59 +02:00
