--- a/test/fixtures/incoming_delivery_items.yml
+++ b/test/fixtures/incoming_delivery_items.yml
@@ -26,9 +26,9 @@
 #  delivery_id      :integer          not null
 #  id               :integer          not null, primary key
 #  lock_version     :integer          default(0), not null
+#  population       :decimal(19, 4)   default(1.0), not null
 #  product_id       :integer          not null
 #  purchase_item_id :integer
-#  quantity         :decimal(19, 4)   default(1.0), not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer
 #
@@ -40,8 +40,8 @@
 #   creator_id: 1
 #   delivery_id: 1
 #   id: 1
+#   population: 0
 #   product_id: 1
-#   quantity: 0
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -52,7 +52,7 @@ incoming_delivery_items_001:
   id: 1
   purchase_item_id: 1
   product_id: 1
-  quantity: 0
+  population: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -63,7 +63,7 @@ incoming_delivery_items_002:
   id: 2
   purchase_item_id: 1
   product_id: 1
-  quantity: 0
+  population: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -74,6 +74,6 @@ incoming_delivery_items_003:
   id: 3
   purchase_item_id: 1
   product_id: 1
-  quantity: 0
+  population: 0
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
