Deactivates useless actions

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -134,6 +134,7 @@
 # - "backend/cells/cropping_plan_on_cultivable_land_parcels_cells#show"
 # - "backend/cells/currents_stocks_by_product_nature_cells#show"
 # - "backend/cells/elapsed_interventions_times_by_activities_cells#show"
+# - "backend/cells/events_cells#show"
 # - "backend/cells/expense_chart_cells#show"
 # - "backend/cells/last_document_archives_cells#list"
 # - "backend/cells/last_document_archives_cells#show"
@@ -412,16 +413,6 @@
 # - "backend/mineral_matters#update"
 # - "backend/observations#index"
 # - "backend/observations#show"
-# - "backend/observations#unroll"
-# - "backend/operation_tasks#create"
-# - "backend/operation_tasks#destroy"
-# - "backend/operation_tasks#edit"
-# - "backend/operation_tasks#index"
-# - "backend/operation_tasks#list"
-# - "backend/operation_tasks#new"
-# - "backend/operation_tasks#show"
-# - "backend/operation_tasks#unroll"
-# - "backend/operation_tasks#update"
 # - "backend/operations#unroll"
 # - "backend/organic_matters#create"
 # - "backend/organic_matters#destroy"
@@ -441,9 +432,7 @@
 # - "backend/organic_matters#unroll"
 # - "backend/organic_matters#update"
 # - "backend/outgoing_deliveries#unroll"
-# - "backend/outgoing_delivery_modes#show"
 # - "backend/outgoing_delivery_modes#unroll"
-# - "backend/outgoing_payment_modes#show"
 # - "backend/outgoing_payment_modes#unroll"
 # - "backend/outgoing_payments#unroll"
 # - "backend/people#autocomplete_for_origin"
@@ -619,10 +608,8 @@
 # - "backend/product_process_phases#destroy"
 # - "backend/product_process_phases#edit"
 # - "backend/product_process_phases#index"
-# - "backend/product_process_phases#list"
 # - "backend/product_process_phases#new"
 # - "backend/product_process_phases#show"
-# - "backend/product_process_phases#unroll"
 # - "backend/product_process_phases#update"
 # - "backend/product_processes#create"
 # - "backend/product_processes#destroy"
@@ -675,7 +662,6 @@
 # - "backend/sale_items#show"
 # - "backend/sale_natures#unroll"
 # - "backend/sales#unroll"
-# - "backend/sequences#show"
 # - "backend/sequences#unroll"
 # - "backend/settlements#create"
 # - "backend/settlements#destroy"
@@ -697,11 +683,8 @@
 # - "backend/snippets#toggle"
 # - "backend/subscription_natures#show"
 # - "backend/subscription_natures#unroll"
-# - "backend/subscriptions#show"
 # - "backend/subscriptions#unroll"
-# - "backend/taxes#show"
 # - "backend/taxes#unroll"
-# - "backend/teams#show"
 # - "backend/teams#unroll"
 # - "backend/transports#unroll"
 # - "backend/users#unroll"
@@ -1335,10 +1318,10 @@ manage_operations:
 - "backend/operations#create"
 - "backend/operations#destroy"
 - "backend/operations#edit"
-- "backend/operations#index"
-- "backend/operations#list"
+- "backend/operations#index" #?
+- "backend/operations#list" #?
 - "backend/operations#new"
-- "backend/operations#show"
+- "backend/operations#show" #?
 - "backend/operations#update"
 
 # Manage outgoing delivery modes
