--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -29,6 +29,7 @@
 #  name         :string(255)      not null
 #  nature_id    :integer          not null
 #  place        :string(255)
+#  restricted   :boolean          not null
 #  started_at   :datetime         not null
 #  stopped_at   :datetime
 #  updated_at   :datetime         not null
@@ -43,6 +44,7 @@
 #   id: 1
 #   name: "Lorem ipsum"
 #   nature_id: 1
+#   restricted: true
 #   started_at: 2009-07-19 19:13:59 +02:00
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
