--- a/test/fixtures/product_nature_variant_indicator_data.yml
+++ b/test/fixtures/product_nature_variant_indicator_data.yml
@@ -61,11 +61,10 @@ product_nature_variant_indicator_data_001:
   computation_method: "frozen"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  decimal_value: 1
   id: 1
   indicator: "population"
-  indicator_datatype: "measure"
-  measure_value_unit: "unity"
-  measure_value_value: "1"
+  indicator_datatype: "decimal"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
@@ -75,11 +74,10 @@ product_nature_variant_indicator_data_002:
   computation_method: "frozen"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  decimal_value: 3
   id: 2
   indicator: "population"
-  indicator_datatype: "measure"
-  measure_value_unit: "unity"
-  measure_value_value: "1"
+  indicator_datatype: "decimal"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
