--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -73,6 +73,7 @@ product_nature_variants_001:
   horizontal_rotation: 0
   id: 1
   nature_id: 1
+  number: "PNV001"
   unit_name: "unit"
   nature_name: "Generic Product Type"
   updated_at: "2009-07-19 19:13:59 +02:00"
@@ -90,6 +91,7 @@ product_nature_variants_002:
   id: 2
   nature_id: 1
   nature_name: "Lorem ipsum"
+  number: "PNV002"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
   variety: "bos"
@@ -105,6 +107,7 @@ product_nature_variants_004:
   id: 4
   nature_id: 4
   nature_name: "Building"
+  number: "PNV004"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
   variety: "building"
@@ -120,6 +123,7 @@ product_nature_variants_029:
   id: 29
   nature_id: 29
   nature_name: "Herd"
+  number: "PNV029"
   updated_at: "2009-07-19 19:13:59 +02:00"
   updater_id: 1
   variety: "animal_group"
