--- a/test/fixtures/product_process_phases.yml
+++ b/test/fixtures/product_process_phases.yml
@@ -52,7 +52,7 @@ product_process_phases_001:
   creator_id: 1
   id: 1
   name: "Lorem ipsum"
-  nature: "Lorem ipsum"
+  nature: "life"
   process_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -62,7 +62,7 @@ product_process_phases_002:
   creator_id: 1
   id: 2
   name: "Lorem ipsum"
-  nature: "Lorem ipsum"
+  nature: "life"
   process_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
