--- a/test/fixtures/production_supports.yml
+++ b/test/fixtures/production_supports.yml
@@ -52,7 +52,7 @@ production_supports_001:
   exclusive: true
   id: 1
   production_id: 1
-  storage_id: 1
+  storage_id: cultivable_land_parcels_001
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -62,6 +62,6 @@ production_supports_002:
   exclusive: false
   id: 2
   production_id: 1
-  storage_id: 1
+  storage_id: cultivable_land_parcels_003
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
