Cleans files to limit errors for tests

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -80,7 +80,6 @@
 # - "backend/animals#show"
 # - "backend/animals#unroll"
 # - "backend/animals#update"
-# - "backend/areas#show"
 # - "backend/areas#unroll"
 # - "backend/assets#unroll"
 # - "backend/bank_statements#unroll"
@@ -177,19 +176,13 @@
 # - "backend/cultivable_land_parcels#show"
 # - "backend/cultivable_land_parcels#unroll"
 # - "backend/cultivable_land_parcels#update"
-# - "backend/custom_field_choices#index"
-# - "backend/custom_field_choices#show"
 # - "backend/custom_field_choices#unroll"
 # - "backend/custom_fields#unroll"
-# - "backend/dashboards#list_my_future_events"
-# - "backend/dashboards#list_recent_events"
 # - "backend/dashboards#search"
 # - "backend/dashboards#tools"
 # - "backend/deposits#unroll"
-# - "backend/districts#show"
 # - "backend/districts#unroll"
 # - "backend/document_archives#show"
-# - "backend/document_templates#show"
 # - "backend/document_templates#unroll"
 # - "backend/documents#create"
 # - "backend/documents#destroy"
@@ -201,12 +194,9 @@
 # - "backend/documents#show"
 # - "backend/documents#update"
 # - "backend/entities#unroll"
-# - "backend/entity_addresses#index"
 # - "backend/entity_addresses#show"
 # - "backend/entity_addresses#unroll"
-# - "backend/entity_links#index"
 # - "backend/entity_links#show"
-# - "backend/entity_links#unroll"
 # - "backend/equipments#list_contained_products"
 # - "backend/equipments#list_groups"
 # - "backend/equipments#list_incidents"
@@ -216,10 +206,13 @@
 # - "backend/equipments#list_places"
 # - "backend/equipments#picture"
 # - "backend/equipments#unroll"
-# - "backend/establishments#show"
 # - "backend/establishments#unroll"
-# - "backend/event_natures#show"
 # - "backend/event_natures#unroll"
+# - "backend/event_participations#create"
+# - "backend/event_participations#destroy"
+# - "backend/event_participations#edit"
+# - "backend/event_participations#new"
+# - "backend/event_participations#update"
 # - "backend/events#list_participations"
 # - "backend/events#show"
 # - "backend/events#unroll"
@@ -231,7 +224,6 @@
 # - "backend/gaps#list"
 # - "backend/gaps#new"
 # - "backend/gaps#show"
-# - "backend/gaps#unroll"
 # - "backend/gaps#update"
 # - "backend/incidents#create"
 # - "backend/incidents#destroy"
@@ -250,7 +242,6 @@
 # - "backend/incoming_delivery_items#new"
 # - "backend/incoming_delivery_modes#show"
 # - "backend/incoming_delivery_modes#unroll"
-# - "backend/incoming_payment_modes#show"
 # - "backend/incoming_payment_modes#unroll"
 # - "backend/incoming_payments#unroll"
 # - "backend/interfacers#autocomplete"
@@ -263,14 +254,6 @@
 # - "backend/interfacers#toggle_view_mode"
 # - "backend/interfacers#unroll"
 # - "backend/interfacers#unroll_options"
-# - "backend/intervention_casts#create"
-# - "backend/intervention_casts#destroy"
-# - "backend/intervention_casts#edit"
-# - "backend/intervention_casts#index"
-# - "backend/intervention_casts#new"
-# - "backend/intervention_casts#show"
-# - "backend/intervention_casts#unroll"
-# - "backend/intervention_casts#update"
 # - "backend/interventions#create"
 # - "backend/interventions#destroy"
 # - "backend/interventions#edit"
@@ -492,15 +475,8 @@
 # - "backend/plants#show"
 # - "backend/plants#unroll"
 # - "backend/plants#update"
-# - "backend/preferences#create"
-# - "backend/preferences#destroy"
-# - "backend/preferences#edit"
 # - "backend/preferences#index"
 # - "backend/preferences#list"
-# - "backend/preferences#new"
-# - "backend/preferences#show"
-# - "backend/preferences#unroll"
-# - "backend/preferences#update"
 # - "backend/prescriptions#create"
 # - "backend/prescriptions#destroy"
 # - "backend/prescriptions#edit"
@@ -527,14 +503,6 @@
 # - "backend/product_groups#show"
 # - "backend/product_groups#unroll"
 # - "backend/product_groups#update"
-# - "backend/product_links#create"
-# - "backend/product_links#destroy"
-# - "backend/product_links#edit"
-# - "backend/product_links#index"
-# - "backend/product_links#list"
-# - "backend/product_links#new"
-# - "backend/product_links#show"
-# - "backend/product_links#update"
 # - "backend/product_localizations#create"
 # - "backend/product_localizations#destroy"
 # - "backend/product_localizations#edit"
@@ -543,15 +511,6 @@
 # - "backend/product_localizations#new"
 # - "backend/product_localizations#show"
 # - "backend/product_localizations#update"
-# - "backend/product_memberships#create"
-# - "backend/product_memberships#destroy"
-# - "backend/product_memberships#edit"
-# - "backend/product_memberships#index"
-# - "backend/product_memberships#list"
-# - "backend/product_memberships#new"
-# - "backend/product_memberships#show"
-# - "backend/product_memberships#unroll"
-# - "backend/product_memberships#update"
 # - "backend/product_nature_categories#create"
 # - "backend/product_nature_categories#destroy"
 # - "backend/product_nature_categories#edit"
@@ -566,11 +525,7 @@
 # - "backend/product_nature_variant_indicator_data#create"
 # - "backend/product_nature_variant_indicator_data#destroy"
 # - "backend/product_nature_variant_indicator_data#edit"
-# - "backend/product_nature_variant_indicator_data#index"
-# - "backend/product_nature_variant_indicator_data#list"
 # - "backend/product_nature_variant_indicator_data#new"
-# - "backend/product_nature_variant_indicator_data#show"
-# - "backend/product_nature_variant_indicator_data#unroll"
 # - "backend/product_nature_variant_indicator_data#update"
 # - "backend/product_nature_variants#create"
 # - "backend/product_nature_variants#destroy"
@@ -587,29 +542,10 @@
 # - "backend/product_natures#list_products"
 # - "backend/product_natures#show"
 # - "backend/product_natures#unroll"
-# - "backend/product_ownerships#create"
-# - "backend/product_ownerships#destroy"
-# - "backend/product_ownerships#edit"
-# - "backend/product_ownerships#index"
-# - "backend/product_ownerships#list"
-# - "backend/product_ownerships#new"
-# - "backend/product_ownerships#show"
-# - "backend/product_ownerships#unroll"
-# - "backend/product_ownerships#update"
-# - "backend/product_phases#create"
-# - "backend/product_phases#destroy"
-# - "backend/product_phases#edit"
-# - "backend/product_phases#index"
-# - "backend/product_phases#new"
-# - "backend/product_phases#show"
-# - "backend/product_phases#unroll"
-# - "backend/product_phases#update"
 # - "backend/product_process_phases#create"
 # - "backend/product_process_phases#destroy"
 # - "backend/product_process_phases#edit"
-# - "backend/product_process_phases#index"
 # - "backend/product_process_phases#new"
-# - "backend/product_process_phases#show"
 # - "backend/product_process_phases#update"
 # - "backend/product_processes#create"
 # - "backend/product_processes#destroy"
@@ -617,7 +553,6 @@
 # - "backend/product_processes#index"
 # - "backend/product_processes#list"
 # - "backend/product_processes#new"
-# - "backend/product_processes#show"
 # - "backend/product_processes#unroll"
 # - "backend/product_processes#update"
 # - "backend/production_supports#create"
@@ -1157,7 +1092,7 @@ manage_financial_years:
 - "backend/financial_years#destroy"
 - "backend/financial_years#edit"
 - "backend/financial_years#generate_last_journal_entry"
-- "backend/financial_years#index"
+- "backend/financial_years#index" #?
 - "backend/financial_years#list"
 - "backend/financial_years#list_account_balances"
 - "backend/financial_years#list_asset_depreciations"
