--- a/test/fixtures/documents.yml
+++ b/test/fixtures/documents.yml
@@ -56,7 +56,7 @@ documents_001:
   key: "Lorem ipsum"
   name: "Lorem ipsum"
   nature: "veterinary_booklet"
-  number: "Lorem ipsum"
+  number: "DOC001"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -69,6 +69,6 @@ documents_002:
   key: "Lorem ipsum 2"
   name: "Lorem ipsum"
   nature: "veterinary_booklet"
-  number: "Lorem ipsum"
+  number: "DOC002"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
