--- a/test/fixtures/product_nature_variant_indicator_data.yml
+++ b/test/fixtures/product_nature_variant_indicator_data.yml
@@ -61,10 +61,11 @@ product_nature_variant_indicator_data_001:
   computation_method: "frozen"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  decimal_value: 1
   id: 1
-  indicator: "population"
-  indicator_datatype: "decimal"
+  indicator: "net_weight"
+  indicator_datatype: "measure"
+  measure_value_value: 1
+  measure_value_unit: "kilogram"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
@@ -74,10 +75,11 @@ product_nature_variant_indicator_data_002:
   computation_method: "frozen"
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  decimal_value: 3
   id: 2
-  indicator: "population"
-  indicator_datatype: "decimal"
+  indicator: "net_volume"
+  indicator_datatype: "measure"
+  measure_value_value: 0.2
+  measure_value_unit: "liter"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   variant_id: 1
