--- a/test/fixtures/product_natures.yml
+++ b/test/fixtures/product_natures.yml
@@ -68,6 +68,7 @@ product_natures_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   evolvable: true
+  frozen_indicators: "net_weight, net_volume"
   id: 1
   name: "Generic Product Type"
   number: "PN001"
