--- a/test/fixtures/custom_fields.yml
+++ b/test/fixtures/custom_fields.yml
@@ -21,7 +21,7 @@
 # == Table: custom_fields
 #
 #  active          :boolean          default(TRUE), not null
-#  column_name     :string(255)
+#  column_name     :string(255)      not null
 #  created_at      :datetime         not null
 #  creator_id      :integer
 #  customized_type :string(255)      not null
@@ -43,6 +43,7 @@
 #
 # custom_fields_001:
 #   active: true
+#   column_name: "Lorem ipsum"
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   customized_type: "Lorem ipsum"
