--- a/test/fixtures/outgoing_deliveries.yml
+++ b/test/fixtures/outgoing_deliveries.yml
@@ -20,13 +20,13 @@
 #
 # == Table: outgoing_deliveries
 #
-#  address_id       :integer
+#  address_id       :integer          not null
 #  created_at       :datetime         not null
 #  creator_id       :integer
 #  id               :integer          not null, primary key
 #  lock_version     :integer          default(0), not null
 #  mode_id          :integer
-#  number           :string(255)
+#  number           :string(255)      not null
 #  recipient_id     :integer          not null
 #  reference_number :string(255)
 #  sale_id          :integer
@@ -41,9 +41,11 @@
 # == Fixture: outgoing_deliveries
 #
 # outgoing_deliveries_001:
+#   address_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   number: "Lorem ipsum"
 #   recipient_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
