--- a/test/fixtures/outgoing_delivery_items.yml
+++ b/test/fixtures/outgoing_delivery_items.yml
@@ -25,8 +25,8 @@
 #  delivery_id       :integer          not null
 #  id                :integer          not null, primary key
 #  lock_version      :integer          default(0), not null
+#  population        :decimal(19, 4)   default(1.0), not null
 #  product_id        :integer          not null
-#  quantity          :decimal(19, 4)   default(1.0), not null
 #  sale_item_id      :integer
 #  source_product_id :integer          not null
 #  updated_at        :datetime         not null
@@ -40,8 +40,8 @@
 #   creator_id: 1
 #   delivery_id: 1
 #   id: 1
+#   population: 0
 #   product_id: 1
-#   quantity: 0
 #   source_product_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
@@ -53,7 +53,7 @@ outgoing_delivery_items_001:
   delivery_id: 1
   id: 1
   product_id: 10
-  quantity: 0
+  population: 0
   source_product_id: 10
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -64,7 +64,7 @@ outgoing_delivery_items_002:
   delivery_id: 1
   id: 2
   product_id: 10
-  quantity: 1
+  population: 1
   source_product_id: 10
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
