--- a/test/fixtures/product_births.yml
+++ b/test/fixtures/product_births.yml
@@ -20,18 +20,18 @@
 #
 # == Table: product_births
 #
-#  created_at        :datetime         not null
-#  creator_id        :integer
-#  id                :integer          not null, primary key
-#  lock_version      :integer          default(0), not null
-#  nature            :string(255)      not null
-#  operation_task_id :integer
-#  producer_id       :integer
-#  product_id        :integer          not null
-#  started_at        :datetime
-#  stopped_at        :datetime
-#  updated_at        :datetime         not null
-#  updater_id        :integer
+#  created_at   :datetime         not null
+#  creator_id   :integer
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  nature       :string(255)      not null
+#  operation_id :integer
+#  producer_id  :integer
+#  product_id   :integer          not null
+#  started_at   :datetime
+#  stopped_at   :datetime
+#  updated_at   :datetime         not null
+#  updater_id   :integer
 #
 #
 # == Fixture: product_births
