--- a/test/fixtures/product_enjoyments.yml
+++ b/test/fixtures/product_enjoyments.yml
@@ -18,53 +18,48 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
-# == Table: operation_tasks
+# == Table: product_enjoyments
 #
-#  created_at     :datetime         not null
-#  creator_id     :integer
-#  id             :integer          not null, primary key
-#  lock_version   :integer          default(0), not null
-#  nature         :string(255)      not null
-#  operation_id   :integer          not null
-#  parent_id      :integer
-#  prorated       :boolean          not null
-#  reference_name :string(255)      not null
-#  updated_at     :datetime         not null
-#  updater_id     :integer
+#  created_at   :datetime         not null
+#  creator_id   :integer
+#  enjoyer_id   :integer
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  nature       :string(255)      not null
+#  operation_id :integer
+#  product_id   :integer          not null
+#  started_at   :datetime
+#  stopped_at   :datetime
+#  updated_at   :datetime         not null
+#  updater_id   :integer
 #
 #
-# == Fixture: operation_tasks
+# == Fixture: product_enjoyments
 #
-# operation_tasks_001:
+# product_enjoyments_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
 #   nature: "Lorem ipsum"
-#   operation_id: 1
-#   prorated: true
-#   reference_name: "Lorem ipsum"
+#   product_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
-operation_tasks_001:
+product_enjoyments_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  nature: "movement"
-  operation_id: 1
-  prorated: false
-  reference_name: "0"
+  nature: "own"
+  product_id: equipments_001
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-operation_tasks_002:
+product_enjoyments_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  nature: "entering"
-  operation_id: 1
-  prorated: false
-  reference_name: "1"
+  nature: "own"
+  product_id: equipments_001
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
