--- a/test/fixtures/product_memberships.yml
+++ b/test/fixtures/product_memberships.yml
@@ -20,17 +20,17 @@
 #
 # == Table: product_memberships
 #
-#  created_at        :datetime         not null
-#  creator_id        :integer
-#  group_id          :integer          not null
-#  id                :integer          not null, primary key
-#  lock_version      :integer          default(0), not null
-#  member_id         :integer          not null
-#  operation_task_id :integer
-#  started_at        :datetime         not null
-#  stopped_at        :datetime
-#  updated_at        :datetime         not null
-#  updater_id        :integer
+#  created_at   :datetime         not null
+#  creator_id   :integer
+#  group_id     :integer          not null
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  member_id    :integer          not null
+#  operation_id :integer
+#  started_at   :datetime         not null
+#  stopped_at   :datetime
+#  updated_at   :datetime         not null
+#  updater_id   :integer
 #
 #
 # == Fixture: product_memberships
