--- a/test/fixtures/production_supports.yml
+++ b/test/fixtures/production_supports.yml
@@ -49,10 +49,10 @@
 production_supports_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  exclusive: true
+  exclusive: false
   id: 1
   production_id: 1
-  storage_id: cultivable_land_parcels_001ss
+  storage_id: 32001
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -62,6 +62,6 @@ production_supports_002:
   exclusive: false
   id: 2
   production_id: 1
-  storage_id: cultivable_land_parcels_003ss
+  storage_id: 32003
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
