Creates attached people of users in the better way

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -500,6 +500,11 @@
 # - "backend/product_groups#show"
 # - "backend/product_groups#unroll"
 # - "backend/product_groups#update"
+# - "backend/product_indicator_data#create"
+# - "backend/product_indicator_data#destroy"
+# - "backend/product_indicator_data#edit"
+# - "backend/product_indicator_data#new"
+# - "backend/product_indicator_data#update"
 # - "backend/product_localizations#create"
 # - "backend/product_localizations#destroy"
 # - "backend/product_localizations#edit"
