--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
-before_install: ./test/ci/before_install.sh
+before_install: 
+ - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+ - ./test/ci/before_install.sh
 before_script: ./test/ci/before_script.sh
-script: xvfb-run bundle exec rake test
+script: bundle exec rake test
