Repairs animal fixtures and #picture tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ rvm:
   - 1.9.3
   - 2.0.0
 before_install: 
+ - "firefox --version"
  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
  - ./test/ci/before_install.sh
 before_script: ./test/ci/before_script.sh
-script: bundle exec rake test
+script: "DISPLAY=:99.0 bundle exec rake test"
