--- a/test/fixtures/interventions.yml
+++ b/test/fixtures/interventions.yml
@@ -65,6 +65,8 @@ interventions_001:
   production_id: 1
   provisional: false
   state: "done"
+  started_at: 2009-05-03 09:13:59 +02:00
+  stopped_at: 2009-05-03 12:17:23 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -77,5 +79,7 @@ interventions_002:
   production_id: 1
   provisional: false
   state: "done"
+  started_at: 2009-06-03 09:13:59 +02:00
+  stopped_at: 2009-06-03 12:17:23 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
