Tries a new config for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
 before_install: 
  - "firefox --version"
  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+ - "export DISPLAY=:99.0"
  - ./test/ci/before_install.sh
 before_script: ./test/ci/before_script.sh
-script: "export DISPLAY=:99.0 && bundle exec rake test"
+script: bundle exec rake test
