Moves carried products automatically

--- a/test/fixtures/product_measurements.yml
+++ b/test/fixtures/product_measurements.yml
@@ -20,19 +20,21 @@
 #
 # == Table: product_measurements
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  id           :integer          not null, primary key
-#  indicator    :string(255)      not null
-#  lock_version :integer          default(0), not null
-#  operation_id :integer
-#  product_id   :integer          not null
-#  reporter_id  :integer
-#  started_at   :datetime         not null
-#  stopped_at   :datetime
-#  tool_id      :integer
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at      :datetime         not null
+#  creator_id      :integer
+#  id              :integer          not null, primary key
+#  indicator       :string(255)      not null
+#  lock_version    :integer          default(0), not null
+#  operation_id    :integer
+#  originator_id   :integer
+#  originator_type :string(255)
+#  product_id      :integer          not null
+#  reporter_id     :integer
+#  started_at      :datetime         not null
+#  stopped_at      :datetime
+#  tool_id         :integer
+#  updated_at      :datetime         not null
+#  updater_id      :integer
 #
 #
 # == Fixture: product_measurements
