--- a/test/fixtures/product_enjoyments.yml
+++ b/test/fixtures/product_enjoyments.yml
@@ -20,18 +20,20 @@
 #
 # == Table: product_enjoyments
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  enjoyer_id   :integer
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  nature       :string(255)      not null
-#  operation_id :integer
-#  product_id   :integer          not null
-#  started_at   :datetime
-#  stopped_at   :datetime
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at      :datetime         not null
+#  creator_id      :integer
+#  enjoyer_id      :integer
+#  id              :integer          not null, primary key
+#  lock_version    :integer          default(0), not null
+#  nature          :string(255)      not null
+#  operation_id    :integer
+#  originator_id   :integer
+#  originator_type :string(255)
+#  product_id      :integer          not null
+#  started_at      :datetime
+#  stopped_at      :datetime
+#  updated_at      :datetime         not null
+#  updater_id      :integer
 #
 #
 # == Fixture: product_enjoyments
