--- a/config/rights.yml
+++ b/config/rights.yml
@@ -50,6 +50,8 @@
 # - "backend/animal_medicines#edit"
 # - "backend/animal_medicines#index"
 # - "backend/animal_medicines#list"
+# - "backend/animal_medicines#list_carried_linkages"
+# - "backend/animal_medicines#list_carrier_linkages"
 # - "backend/animal_medicines#list_contained_products"
 # - "backend/animal_medicines#list_groups"
 # - "backend/animal_medicines#list_incidents"
@@ -67,6 +69,8 @@
 # - "backend/animals#edit"
 # - "backend/animals#index"
 # - "backend/animals#list"
+# - "backend/animals#list_carried_linkages"
+# - "backend/animals#list_carrier_linkages"
 # - "backend/animals#list_children"
 # - "backend/animals#list_contained_products"
 # - "backend/animals#list_groups"
@@ -88,6 +92,8 @@
 # - "backend/building_divisions#edit"
 # - "backend/building_divisions#index"
 # - "backend/building_divisions#list"
+# - "backend/building_divisions#list_carried_linkages"
+# - "backend/building_divisions#list_carrier_linkages"
 # - "backend/building_divisions#list_contained_products"
 # - "backend/building_divisions#list_groups"
 # - "backend/building_divisions#list_incidents"
@@ -100,6 +106,8 @@
 # - "backend/building_divisions#show"
 # - "backend/building_divisions#unroll"
 # - "backend/building_divisions#update"
+# - "backend/buildings#list_carried_linkages"
+# - "backend/buildings#list_carrier_linkages"
 # - "backend/buildings#list_contained_products"
 # - "backend/buildings#list_divisions"
 # - "backend/buildings#list_groups"
@@ -163,6 +171,8 @@
 # - "backend/cultivable_land_parcels#edit"
 # - "backend/cultivable_land_parcels#index"
 # - "backend/cultivable_land_parcels#list"
+# - "backend/cultivable_land_parcels#list_carried_linkages"
+# - "backend/cultivable_land_parcels#list_carrier_linkages"
 # - "backend/cultivable_land_parcels#list_contained_products"
 # - "backend/cultivable_land_parcels#list_groups"
 # - "backend/cultivable_land_parcels#list_incidents"
@@ -197,6 +207,8 @@
 # - "backend/entity_addresses#show"
 # - "backend/entity_addresses#unroll"
 # - "backend/entity_links#show"
+# - "backend/equipments#list_carried_linkages"
+# - "backend/equipments#list_carrier_linkages"
 # - "backend/equipments#list_contained_products"
 # - "backend/equipments#list_groups"
 # - "backend/equipments#list_incidents"
@@ -278,6 +290,8 @@
 # - "backend/land_parcel_clusters#edit"
 # - "backend/land_parcel_clusters#index"
 # - "backend/land_parcel_clusters#list"
+# - "backend/land_parcel_clusters#list_carried_linkages"
+# - "backend/land_parcel_clusters#list_carrier_linkages"
 # - "backend/land_parcel_clusters#list_contained_products"
 # - "backend/land_parcel_clusters#list_groups"
 # - "backend/land_parcel_clusters#list_incidents"
@@ -295,6 +309,8 @@
 # - "backend/land_parcel_groups#edit"
 # - "backend/land_parcel_groups#index"
 # - "backend/land_parcel_groups#list"
+# - "backend/land_parcel_groups#list_carried_linkages"
+# - "backend/land_parcel_groups#list_carrier_linkages"
 # - "backend/land_parcel_groups#list_contained_products"
 # - "backend/land_parcel_groups#list_groups"
 # - "backend/land_parcel_groups#list_incidents"
@@ -307,6 +323,8 @@
 # - "backend/land_parcel_groups#show"
 # - "backend/land_parcel_groups#unroll"
 # - "backend/land_parcel_groups#update"
+# - "backend/land_parcels#list_carried_linkages"
+# - "backend/land_parcels#list_carrier_linkages"
 # - "backend/land_parcels#list_contained_products"
 # - "backend/land_parcels#list_groups"
 # - "backend/land_parcels#list_incidents"
@@ -346,6 +364,8 @@
 # - "backend/matters#edit"
 # - "backend/matters#index"
 # - "backend/matters#list"
+# - "backend/matters#list_carried_linkages"
+# - "backend/matters#list_carrier_linkages"
 # - "backend/matters#list_contained_products"
 # - "backend/matters#list_groups"
 # - "backend/matters#list_incidents"
@@ -363,6 +383,8 @@
 # - "backend/medicines#edit"
 # - "backend/medicines#index"
 # - "backend/medicines#list"
+# - "backend/medicines#list_carried_linkages"
+# - "backend/medicines#list_carrier_linkages"
 # - "backend/medicines#list_contained_products"
 # - "backend/medicines#list_groups"
 # - "backend/medicines#list_incidents"
@@ -380,6 +402,8 @@
 # - "backend/mineral_matters#edit"
 # - "backend/mineral_matters#index"
 # - "backend/mineral_matters#list"
+# - "backend/mineral_matters#list_carried_linkages"
+# - "backend/mineral_matters#list_carrier_linkages"
 # - "backend/mineral_matters#list_contained_products"
 # - "backend/mineral_matters#list_groups"
 # - "backend/mineral_matters#list_incidents"
@@ -398,6 +422,8 @@
 # - "backend/organic_matters#edit"
 # - "backend/organic_matters#index"
 # - "backend/organic_matters#list"
+# - "backend/organic_matters#list_carried_linkages"
+# - "backend/organic_matters#list_carrier_linkages"
 # - "backend/organic_matters#list_contained_products"
 # - "backend/organic_matters#list_groups"
 # - "backend/organic_matters#list_incidents"
@@ -442,6 +468,8 @@
 # - "backend/plant_medicines#edit"
 # - "backend/plant_medicines#index"
 # - "backend/plant_medicines#list"
+# - "backend/plant_medicines#list_carried_linkages"
+# - "backend/plant_medicines#list_carrier_linkages"
 # - "backend/plant_medicines#list_contained_products"
 # - "backend/plant_medicines#list_groups"
 # - "backend/plant_medicines#list_incidents"
@@ -459,6 +487,8 @@
 # - "backend/plants#edit"
 # - "backend/plants#index"
 # - "backend/plants#list"
+# - "backend/plants#list_carried_linkages"
+# - "backend/plants#list_carrier_linkages"
 # - "backend/plants#list_contained_products"
 # - "backend/plants#list_groups"
 # - "backend/plants#list_incidents"
@@ -487,6 +517,8 @@
 # - "backend/product_groups#edit"
 # - "backend/product_groups#index"
 # - "backend/product_groups#list"
+# - "backend/product_groups#list_carried_linkages"
+# - "backend/product_groups#list_carrier_linkages"
 # - "backend/product_groups#list_contained_products"
 # - "backend/product_groups#list_groups"
 # - "backend/product_groups#list_incidents"
@@ -571,6 +603,8 @@
 # - "backend/products#create"
 # - "backend/products#destroy"
 # - "backend/products#edit"
+# - "backend/products#list_carried_linkages"
+# - "backend/products#list_carrier_linkages"
 # - "backend/products#list_contained_products"
 # - "backend/products#list_groups"
 # - "backend/products#list_incidents"
@@ -596,6 +630,8 @@
 # - "backend/settlements#edit"
 # - "backend/settlements#index"
 # - "backend/settlements#list"
+# - "backend/settlements#list_carried_linkages"
+# - "backend/settlements#list_carrier_linkages"
 # - "backend/settlements#list_contained_products"
 # - "backend/settlements#list_groups"
 # - "backend/settlements#list_incidents"
@@ -621,6 +657,8 @@
 # - "backend/workers#edit"
 # - "backend/workers#index"
 # - "backend/workers#list"
+# - "backend/workers#list_carried_linkages"
+# - "backend/workers#list_carrier_linkages"
 # - "backend/workers#list_contained_products"
 # - "backend/workers#list_groups"
 # - "backend/workers#list_incidents"
