add simple way objective management (nitrogen input)

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -590,6 +590,15 @@
 # - "backend/product_processes#new"
 # - "backend/product_processes#unroll"
 # - "backend/product_processes#update"
+# - "backend/production_support_markers#create"
+# - "backend/production_support_markers#destroy"
+# - "backend/production_support_markers#edit"
+# - "backend/production_support_markers#index"
+# - "backend/production_support_markers#list"
+# - "backend/production_support_markers#new"
+# - "backend/production_support_markers#show"
+# - "backend/production_support_markers#unroll"
+# - "backend/production_support_markers#update"
 # - "backend/production_supports#create"
 # - "backend/production_supports#destroy"
 # - "backend/production_supports#edit"
