--- a/config/rights.yml
+++ b/config/rights.yml
@@ -57,6 +57,7 @@
 # - "backend/animal_medicines#list_incidents"
 # - "backend/animal_medicines#list_indicators"
 # - "backend/animal_medicines#list_intervention_casts"
+# - "backend/animal_medicines#list_markers"
 # - "backend/animal_medicines#list_members"
 # - "backend/animal_medicines#list_places"
 # - "backend/animal_medicines#new"
@@ -77,6 +78,7 @@
 # - "backend/animals#list_incidents"
 # - "backend/animals#list_indicators"
 # - "backend/animals#list_intervention_casts"
+# - "backend/animals#list_markers"
 # - "backend/animals#list_members"
 # - "backend/animals#list_places"
 # - "backend/animals#new"
@@ -99,6 +101,7 @@
 # - "backend/building_divisions#list_incidents"
 # - "backend/building_divisions#list_indicators"
 # - "backend/building_divisions#list_intervention_casts"
+# - "backend/building_divisions#list_markers"
 # - "backend/building_divisions#list_members"
 # - "backend/building_divisions#list_places"
 # - "backend/building_divisions#new"
@@ -114,6 +117,7 @@
 # - "backend/buildings#list_incidents"
 # - "backend/buildings#list_indicators"
 # - "backend/buildings#list_intervention_casts"
+# - "backend/buildings#list_markers"
 # - "backend/buildings#list_members"
 # - "backend/buildings#list_places"
 # - "backend/buildings#picture"
@@ -180,6 +184,7 @@
 # - "backend/cultivable_land_parcels#list_incidents"
 # - "backend/cultivable_land_parcels#list_indicators"
 # - "backend/cultivable_land_parcels#list_intervention_casts"
+# - "backend/cultivable_land_parcels#list_markers"
 # - "backend/cultivable_land_parcels#list_members"
 # - "backend/cultivable_land_parcels#list_places"
 # - "backend/cultivable_land_parcels#list_productions"
@@ -216,6 +221,7 @@
 # - "backend/equipments#list_incidents"
 # - "backend/equipments#list_indicators"
 # - "backend/equipments#list_intervention_casts"
+# - "backend/equipments#list_markers"
 # - "backend/equipments#list_members"
 # - "backend/equipments#list_places"
 # - "backend/equipments#picture"
@@ -299,6 +305,7 @@
 # - "backend/land_parcel_clusters#list_incidents"
 # - "backend/land_parcel_clusters#list_indicators"
 # - "backend/land_parcel_clusters#list_intervention_casts"
+# - "backend/land_parcel_clusters#list_markers"
 # - "backend/land_parcel_clusters#list_members"
 # - "backend/land_parcel_clusters#list_places"
 # - "backend/land_parcel_clusters#new"
@@ -318,6 +325,7 @@
 # - "backend/land_parcel_groups#list_incidents"
 # - "backend/land_parcel_groups#list_indicators"
 # - "backend/land_parcel_groups#list_intervention_casts"
+# - "backend/land_parcel_groups#list_markers"
 # - "backend/land_parcel_groups#list_members"
 # - "backend/land_parcel_groups#list_places"
 # - "backend/land_parcel_groups#new"
@@ -332,6 +340,7 @@
 # - "backend/land_parcels#list_incidents"
 # - "backend/land_parcels#list_indicators"
 # - "backend/land_parcels#list_intervention_casts"
+# - "backend/land_parcels#list_markers"
 # - "backend/land_parcels#list_members"
 # - "backend/land_parcels#list_places"
 # - "backend/land_parcels#picture"
@@ -373,6 +382,7 @@
 # - "backend/matters#list_incidents"
 # - "backend/matters#list_indicators"
 # - "backend/matters#list_intervention_casts"
+# - "backend/matters#list_markers"
 # - "backend/matters#list_members"
 # - "backend/matters#list_places"
 # - "backend/matters#new"
@@ -392,6 +402,7 @@
 # - "backend/medicines#list_incidents"
 # - "backend/medicines#list_indicators"
 # - "backend/medicines#list_intervention_casts"
+# - "backend/medicines#list_markers"
 # - "backend/medicines#list_members"
 # - "backend/medicines#list_places"
 # - "backend/medicines#new"
@@ -411,6 +422,7 @@
 # - "backend/mineral_matters#list_incidents"
 # - "backend/mineral_matters#list_indicators"
 # - "backend/mineral_matters#list_intervention_casts"
+# - "backend/mineral_matters#list_markers"
 # - "backend/mineral_matters#list_members"
 # - "backend/mineral_matters#list_places"
 # - "backend/mineral_matters#new"
@@ -431,6 +443,7 @@
 # - "backend/organic_matters#list_incidents"
 # - "backend/organic_matters#list_indicators"
 # - "backend/organic_matters#list_intervention_casts"
+# - "backend/organic_matters#list_markers"
 # - "backend/organic_matters#list_members"
 # - "backend/organic_matters#list_places"
 # - "backend/organic_matters#new"
@@ -477,6 +490,7 @@
 # - "backend/plant_medicines#list_incidents"
 # - "backend/plant_medicines#list_indicators"
 # - "backend/plant_medicines#list_intervention_casts"
+# - "backend/plant_medicines#list_markers"
 # - "backend/plant_medicines#list_members"
 # - "backend/plant_medicines#list_places"
 # - "backend/plant_medicines#new"
@@ -496,6 +510,7 @@
 # - "backend/plants#list_incidents"
 # - "backend/plants#list_indicators"
 # - "backend/plants#list_intervention_casts"
+# - "backend/plants#list_markers"
 # - "backend/plants#list_members"
 # - "backend/plants#list_places"
 # - "backend/plants#new"
@@ -526,6 +541,7 @@
 # - "backend/product_groups#list_incidents"
 # - "backend/product_groups#list_indicators"
 # - "backend/product_groups#list_intervention_casts"
+# - "backend/product_groups#list_markers"
 # - "backend/product_groups#list_members"
 # - "backend/product_groups#list_places"
 # - "backend/product_groups#new"
@@ -604,6 +620,8 @@
 # - "backend/production_supports#edit"
 # - "backend/production_supports#index"
 # - "backend/production_supports#list"
+# - "backend/production_supports#list_interventions"
+# - "backend/production_supports#list_markers"
 # - "backend/production_supports#new"
 # - "backend/production_supports#show"
 # - "backend/production_supports#unroll"
@@ -621,6 +639,7 @@
 # - "backend/products#list_incidents"
 # - "backend/products#list_indicators"
 # - "backend/products#list_intervention_casts"
+# - "backend/products#list_markers"
 # - "backend/products#list_members"
 # - "backend/products#list_places"
 # - "backend/products#new"
@@ -648,6 +667,7 @@
 # - "backend/settlements#list_incidents"
 # - "backend/settlements#list_indicators"
 # - "backend/settlements#list_intervention_casts"
+# - "backend/settlements#list_markers"
 # - "backend/settlements#list_members"
 # - "backend/settlements#list_places"
 # - "backend/settlements#new"
@@ -675,6 +695,7 @@
 # - "backend/workers#list_incidents"
 # - "backend/workers#list_indicators"
 # - "backend/workers#list_intervention_casts"
+# - "backend/workers#list_markers"
 # - "backend/workers#list_members"
 # - "backend/workers#list_places"
 # - "backend/workers#new"
